--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,4 @@ install:
   - pip install -r requirements.txt
 script:
   - cd decide
-  - coverage run --branch --source=. ./manage.py test --keepdb --with-xunit
-  - coverage xml
-  - python-codacy-coverage -r coverage.xml
+  - python ./manage.py test --keepdb
