--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,13 +10,13 @@ RUN pip install ipython
 
 WORKDIR /app
 
-RUN git clone https://github.com/egc/decide.git .
+RUN git clone https://github.com/supremmaer/EGC-sep-FRAFUEBON.git .
 RUN pip install -r requirements.txt
 
 WORKDIR /app/decide
 
 # local settings.py
-ADD docker-settings.py /app/decide/local_settings.py
+ADD docker-settings1.py /app/decide/local_settings.py
 
 RUN ./manage.py collectstatic
 
